--- a/build_production/contact/index.html
+++ b/build_production/contact/index.html
@@ -109,7 +109,7 @@
             <h1>Contact</h1>
 
 <p class="mb-8">
-    Static sites are unable to handle form submissions. However, there are third-party services, like Tighten’s <a href="https://fieldgoal.io" title="FieldGoal">FieldGoal</a>, which can accept the form submission, email you the result, and redirect back to a thank you page.
+     You are welcome to send me a message XD.
 </p>
 
 
